# clicker-bot

./: .editorconfig  .gitignore  Cargo.toml  README.md
bindings/: build.rs
src/: configuration.rs  event.rs  keyboard.rs  lib.rs  main.rs  mouse.rs
src/config/: mod.rs
src/eventgrid/: mod.rs  signal.rs
src/hardware/: keyboard.rs  mod.rs  mouse.rs
src/replay/: command.rs  mod.rs  recorder.rs  replayer.rs
test/: commands.yaml  faulty.yaml
