[package]
authors = ["Jil Sahm"]
name = "clicker-bot"
version = "0.1.0"
edition = "2018"

[dependencies]

# utils
env_logger = "0.9.0"
log = "0.4.14"
serde = { version = "1.0.130", features = ["derive"] }
serde_yaml = "0.8"

# runtime
clap = "3.0.0-beta.4"
windows = "0.19.0"
bindings = { path = "bindings" }
